--- a/index.html
+++ b/index.html
@@ -10,8 +10,39 @@
     <h1 class="flex">Discover hidden places in the world around you</h1>
     <div class="flex download">
         <a href="#">Download Excursion (coming soon)</a>
-    
+
     </div>
+
+    <div class="video">
+        <video autoplay muted loop>
+            <source src="resources/videos/excursion.mp4" />
+        </video>
+    </div>
+
+    <h2>Your Personal Travel Guide</h2>
+    <div class="subhead">
+        Excursion remembers places you like, and recommends new points of interest around you.
+    </div>
+
+    <br />
+    <div>
+        <img src="resources/photos/camp.jpg" />
+    </div>
+
+    <br />
+    <div>
+        <img src="resources/photos/phone.PNG" />
+    </div>
+
+    <h1 class="flex">Coming Soon for iPhone and Android</h1>
+    <div class="flex download">
+        <a href="#">Download Excursion (coming soon)</a>
+
+    </div>
+
+    <footer>
+        &copy; Excursion
+    </footer>
 
 </body>
 </html>
